--- a/list2/list2.ipynb
+++ b/list2/list2.ipynb
@@ -1615,6 +1615,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
